@@ -1,3 +1,7 @@
+2008-11-22  higepon  <higepon@users.sourceforge.jp>
+
+        * Added test for magnitude.
+
 2008-11-22  kokosabu  <kokosabu@gmail.com>
 
         * Added : fix-.
